--- a/App/templates/App/admin_dashboard.html
+++ b/App/templates/App/admin_dashboard.html
@@ -28,85 +28,8 @@
     </style>
 </head>
 <body>
-    <div class="sidebar">
-        <div class="logo_content">
-            <div class="logo">
-                <!-- <i class='bx bxl-c-plus-plus'></i> -->
-                <div class="logo_name">
-                    <img src="{% static 'img/charusatlogo.png' %}" alt="" style="width:150px;" class="rounded-circle" id="lgid">
-                </div>
-            </div>
-            <i class="bx bx-menu" id="btn"></i>
-        </div>
-        <ul class="nav_list">
-            <li>
-                    <i class="bx bx-search"></i>
-                    <input type="text" placeholder="Search...">
-                <span class="tooltip"><b>Search...</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-grid-alt"></i>
-                    <span class="links_name">DashBoard</span>
-                </a>
-                <span class="tooltip"><b>DashBoard</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-cross"></i>
-                    <span class="links_name">Create Event</span>
-                </a>
-                <span class="tooltip"><b>Create Event</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-calendar-check"></i>
-                    <span class="links_name">SubEvent</span>
-                </a>
-                <span class="tooltip"><b>Sub Event</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bxs-calendar"></i>
-                    <span class="links_name">BatchWise Nomination</span>
-                </a>
-                <span class="tooltip"><b>Nomination</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-certification"></i>
-                    <span class="links_name">Certificate</span>
-                </a>
-                <span class="tooltip"><b>Certificate</b></span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bxs-user-check"></i>
-                    <span class="links_name">Attendance</span>
-                </a>
-                <span class="tooltip"><b>Attendance</b></span>
-            </li>
-            <li>
-                <a href="/logout">
-                    <i class="bx bx-log-out"></i>
-                    <span class="links_name">Log Out</span>
-                </a>
-                <span class="tooltip"><b>Log Out</b></span>
-            </li>
-        </ul>
-        <div class="profile_content">
-            <div class="profile">
-                <div class="profile_details">
-                    <img src="{% static 'img/1.png' %}" alt="">
-                    <div class="name_job">
-                        <div class="name">Admin</div>
-                        <div class="job">Web Desiner</div>
-                    </div>
-                </div>
-                <i class="bx bx-log-out" id="log_out"></i>
-            </div>
-        </div>
-    </div>
+    {% load static %}
+    {% include "partials/sidebar.html" %}
     <div class="home_content">
         <img src="{% static 'img/bg1.jpg' %}" alt="" id="mainI">
     </div>
