--- a/App/templates/App/announcement.html
+++ b/App/templates/App/announcement.html
@@ -38,7 +38,7 @@
 
     <div class="home_content">
       <!-- <div class="text">Home Content</div> -->
-      <!-- <img src="bg1.jpg" alt="" id="mainI"> -->
+      {% comment %} <img src="{% static 'img/bg1.jpg' %}" alt="" id="mainI"> {% endcomment %}
       <section class="announcement_section">
         <div class="heading_announcement">
           <h1>Announcement</h1>
