--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
-
+  <title> hi </title>
   <style>
     #button{
         background-color: #6F4E37;
