--- a/App/templates/partials/sidebar.html
+++ b/App/templates/partials/sidebar.html
@@ -38,7 +38,7 @@
             <span class="tooltip"><b>Announcement</b></span>
         </li>
         <li>
-            <a href="#">
+            <a href="{% url 'nomination' %}">
                 <i class="bx bxs-calendar"></i>
                 <span class="links_name">BatchWise Nomination</span>
             </a>
