--- a/App/templates/App/add_announcement.html
+++ b/App/templates/App/add_announcement.html
@@ -36,7 +36,71 @@
 </head>
 
 <body>
-    {% include "partials/sidebar.html" %}
+    <div class="sidebar">
+        <div class="logo_content">
+            <div class="logo">
+                <!-- <i class='bx bxl-c-plus-plus'></i> -->
+                <div class="logo_name">
+                    <img src="charusat_transparent.png" alt="" style="width:180px; height: 49px;" id="lgid">
+                </div>
+            </div>
+            <i class="bx bx-menu" id="btn"></i>
+        </div>
+        <ul class="nav_list">
+            <li>
+                <i class="bx bx-search"></i>
+                <input type="text" placeholder="Search...">
+                <span class="tooltip"><b>Search...</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-grid-alt"></i>
+                    <span class="links_name">DashBoard</span>
+                </a>
+                <span class="tooltip"><b>DashBoard</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-cross"></i>
+                    <span class="links_name">Create Event</span>
+                </a>
+                <span class="tooltip"><b>Create Event</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-calendar-check"></i>
+                    <span class="links_name">SubEvent</span>
+                </a>
+                <span class="tooltip"><b>Sub Event</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bxs-calendar"></i>
+                    <span class="links_name">BatchWise Nomination</span>
+                </a>
+                <span class="tooltip"><b>Nomination</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-certification"></i>
+                    <span class="links_name">Certificate</span>
+                </a>
+                <span class="tooltip"><b>Certificate</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bxs-user-check"></i>
+                    <span class="links_name">Attendance</span>
+                </a>
+                <span class="tooltip"><b>Attendance</b></span>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="bx bx-log-out"></i>
+                    <span class="links_name">Log Out</span>
+                </a>
+                <span class="tooltip"><b>Log Out</b></span>
+            </li>
 
     <div class="home_content">
         <section class="tabs" id="tabs">
