--- a/App/templates/App/nomination.html
+++ b/App/templates/App/nomination.html
@@ -38,7 +38,7 @@
 <body onload="init()">
     
     <!-- SIDE NAVBAR -->
-    {% include "partials/sidebar.html" %}
+    {% include "partials/user_sidebar.html" %}
 
     <!-- SIDE NAVBAR END -->
 
