--- a/App/templates/App/admin_dashboard.html
+++ b/App/templates/App/admin_dashboard.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Boxicons CDN Links -->
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Admin_DashBoard</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/user_dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user_dashboard.css' %}" />
     <style>
-        #lgid{
-            justify-items: center;
-            margin: 30px;
-            padding-top: 15px;
-        }
-        #mainI{
-            height:100%;
-            width:100%;
-            opacity: 0.9;
-        }
-        #mainTx{
-            justify-items: center;
-            display: flex;
-            justify-content: center;
-        }
+      #lgid {
+        justify-items: center;
+        margin: 30px;
+        padding-top: 15px;
+      }
+      #mainI {
+        height: 100%;
+        width: 100%;
+        opacity: 0.9;
+      }
+      #mainTx {
+        justify-items: center;
+        display: flex;
+        justify-content: center;
+      }
     </style>
-</head>
-<body>
-    {% load static %}
-    {% include "partials/sidebar.html" %}
+  </head>
+  <body>
+    {% load static %} {% include "partials/sidebar.html" %}
     <div class="home_content">
-        <img src="{% static 'img/bg1.jpg' %}" alt="" id="mainI">
+      <img src="{% static 'img/bg1.jpg' %}" alt="" id="mainI" />
     </div>
     <script>
-        let btn = document.querySelector("#btn");
-        let sidebar = document.querySelector(".sidebar");
-        let searchBtn = document.querySelector(".bx-search");
+      let btn = document.querySelector("#btn");
+      let sidebar = document.querySelector(".sidebar");
+      let searchBtn = document.querySelector(".bx-search");
 
-        btn.onclick =function() {
-            sidebar.classList.toggle("active");
-        }
-        searchBtn.onclick =function() {
-            sidebar.classList.toggle("active");
-        }
+      btn.onclick = function () {
+        sidebar.classList.toggle("active");
+      };
+      searchBtn.onclick = function () {
+        sidebar.classList.toggle("active");
+      };
     </script>
-</body>
+  </body>
 </html>
