--- a/App/templates/partials/sidebar.html
+++ b/App/templates/partials/sidebar.html
@@ -5,7 +5,7 @@
         <div class="logo">
             <!-- <i class='bx bxl-c-plus-plus'></i> -->
             <div class="logo_name">
-                <img src="{% static 'img/charusat_transparent.png' %}" alt="" style="width:150px;" class="rounded-circle" id="lgid">
+                <img src="{% static 'img/charusat_transparent.png' %}" alt="" style="width:150px;" class="" id="lgid">
             </div>
         </div>
         <i class="bx bx-menu" id="btn"></i>
