--- a/App/templates/partials/user_sidebar.html
+++ b/App/templates/partials/user_sidebar.html
@@ -9,7 +9,7 @@
             src="{% static 'img/charusatlogo.png' %}"
             alt=""
             style="width: 150px"
-            class="rounded-circle"
+            class=""
             id="lgid"
           />
         </div>
