--- a/App/templates/partials/user_sidebar.html
+++ b/App/templates/partials/user_sidebar.html
@@ -30,6 +30,13 @@
         <span class="tooltip"><b>DashBoard</b></span>
       </li>
       <li>
+        <a href="{% url 'list_announcement' %}">
+            <i class="bx bx-cross"></i>
+            <span class="links_name">Announcement_List</span>
+        </a>
+        <span class="tooltip"><b>Announcement_List</b></span>
+    </li>
+      <li>
         <a href="{% url 'nomination' %}">
           <i class="bx bxs-calendar"></i>
           <span class="links_name">BatchWise Nomination</span>
