--- a/App/static/css/nomination.css
+++ b/App/static/css/nomination.css
@@ -1,469 +1,467 @@
 /* @import url('https://fonts.google.com/specimen/Poppins?query=Poppins#standard-styles'); */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-    position: relative;
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 78px;
-    background: #11101d;
-    padding: 6px 14px;
-    transition: all 0.5s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 78px;
+  background: #11101d;
+  padding: 6px 14px;
+  transition: all 0.5s ease;
 }
 
 .sidebar.active {
-    width: 240px;
-
+  width: 240px;
 }
 
 .sidebar .logo_content .logo {
-    color: #fff;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s ease;
+  color: #fff;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s ease;
 }
 
 .sidebar.active .logo_content .logo {
-    opacity: 1;
-    pointer-events: none;
+  opacity: 1;
+  pointer-events: none;
 }
 
 .logo_content .logo i {
-    font-size: 28px;
-    margin-right: 5px;
+  font-size: 28px;
+  margin-right: 5px;
 }
 
 .sidebar #btn {
-    position: absolute;
-    color: #fff;
-    left: 50%;
-    top: 6px;
-    font-size: 20px;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    line-height: 50px;
-    transform: translateX(-50%);
+  position: absolute;
+  color: #fff;
+  left: 50%;
+  top: 6px;
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  transform: translateX(-50%);
 }
 
 .sidebar.active #btn {
-    left: 90%;
+  left: 90%;
 }
 
 .sidebar ul {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .sidebar ul li {
-    position: relative;
-    height: 50px;
-    width: 100%;
-    margin: 0 0 0 -35px;
-    list-style: none;
-    line-height: 50px;
-    /* border-radius: 12px; */
+  position: relative;
+  height: 50px;
+  width: 100%;
+  margin: 0 0 0 -35px;
+  list-style: none;
+  line-height: 50px;
+  /* border-radius: 12px; */
 }
 
 .sidebar ul li .tooltip {
-    position: absolute;
-    left: 122px;
-    top: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 6px;
-    height: 35px;
-    width: 122px;
-    background: #fff;
-    line-height: 35px;
-    box-shadow: 0 5px 10px rgba(252, 251, 251, 0.5);
-    text-align: center;
-    transition: 0s;
-    opacity: 0;
-    pointer-events: none;
-    font-size: large;
-    color: rgb(251, 7, 7);
+  position: absolute;
+  left: 122px;
+  top: 0;
+  transform: translate(-50%, -50%);
+  border-radius: 6px;
+  height: 35px;
+  width: 122px;
+  background: #fff;
+  line-height: 35px;
+  box-shadow: 0 5px 10px rgba(252, 251, 251, 0.5);
+  text-align: center;
+  transition: 0s;
+  opacity: 0;
+  pointer-events: none;
+  font-size: large;
+  color: rgb(251, 7, 7);
 }
 
 .sidebar.active ul li .tooltip {
-    display: none;
+  display: none;
 }
 
 .sidebar ul li:hover .tooltip {
-    transition: all 0.2s ease;
-    opacity: 1;
-    top: 50%
+  transition: all 0.2s ease;
+  opacity: 1;
+  top: 50%;
 }
 
 .sidebar ul li input {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    border-radius: 12px;
-    outline: none;
-    border: none;
-    background: #242241;
-    padding-left: 50px;
-    font-size: 18px;
-    color: #fff;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 12px;
+  outline: none;
+  border: none;
+  background: #242241;
+  padding-left: 50px;
+  font-size: 18px;
+  color: #fff;
 }
 
 .sidebar ul li .bx-search {
-    position: absolute;
-    z-index: 99;
-    color: #fff;
-    font-size: 22px;
-    transition: all 0.2 ease;
+  position: absolute;
+  z-index: 99;
+  color: #fff;
+  font-size: 22px;
+  transition: all 0.2 ease;
 }
 
 .sidebar ul li .bx-search:hover {
-    background: #fff;
-    color: #1d1b31;
+  background: #fff;
+  color: #1d1b31;
 }
 
 .sidebar ul li a {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    transition: all 0.2s ease;
-    border-radius: 12px;
-    white-space: nowrap;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.2s ease;
+  border-radius: 12px;
+  white-space: nowrap;
 }
 
 .sidebar ul li a:hover {
-    color: #11101d;
-    background: #fff;
+  color: #11101d;
+  background: #fff;
 }
 
 .sidebar ul li i {
-    height: 50px;
-    min-width: 50px;
-    border-radius: 12px;
-    line-height: 50px;
-    text-align: center;
+  height: 50px;
+  min-width: 50px;
+  border-radius: 12px;
+  line-height: 50px;
+  text-align: center;
 }
 
 .sidebar .links_name {
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s ease;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s ease;
 }
 
 .sidebar.active .links_name {
-    opacity: 1;
-    pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .sidebar .profile_content {
-    position: absolute;
-    color: #fff;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+  position: absolute;
+  color: #fff;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .sidebar .profile_content .profile {
-    position: relative;
-    padding: 10px 6px;
-    height: 60px;
-    background: none;
-    transition: all 0.4s ease;
+  position: relative;
+  padding: 10px 6px;
+  height: 60px;
+  background: none;
+  transition: all 0.4s ease;
 }
 
 .sidebar.active .profile_content .profile {
-    background: none;
+  background: none;
 }
 
 .profile_content .profile .profile_details {
-    display: flex;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    white-space: nowrap;
+  display: flex;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  white-space: nowrap;
 }
 
 .sidebar.active .profile .profile_details {
-    opacity: 1;
-    pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .profile .profile_details img {
-    height: 45px;
-    width: 45px;
-    object-fit: cover;
-    border-radius: 12px;
+  height: 45px;
+  width: 45px;
+  object-fit: cover;
+  border-radius: 12px;
 }
 
 .profile .profile_details .name_job {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 .profile .profile_details .name {
-    font-size: 15px;
-    font-weight: 400;
+  font-size: 15px;
+  font-weight: 400;
 }
 
 .profile .profile_details .job {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .profile #log_out {
-    position: absolute;
-    left: 50%;
-    bottom: 5px;
-    transform: translateX(-50%);
-    min-width: 50px;
-    line-height: 50px;
-    font-size: 20px;
-    border-radius: 12px;
-    text-align: center;
-    transition: all 0.4s ease;
-    background: #1d1b31;
+  position: absolute;
+  left: 50%;
+  bottom: 5px;
+  transform: translateX(-50%);
+  min-width: 50px;
+  line-height: 50px;
+  font-size: 20px;
+  border-radius: 12px;
+  text-align: center;
+  transition: all 0.4s ease;
+  background: #1d1b31;
 }
 
 .sidebar.active .profile #log_out {
-    left: 88%;
+  left: 88%;
 }
 
 .sidebar.active .profile #log_out {
-    background: none;
+  background: none;
 }
 
 .home_content {
-    background: url('http://127.0.0.1:8000/static/img/bg1.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    position: absolute;
-    height: 100%;
-    /* width: calc(100% - 240px);
+  background: url("http://127.0.0.1:8000/static/img/bg1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  position: absolute;
+  height: 100%;
+  /* width: calc(100% - 240px);
     left: 240px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 78px;
-    width: calc(100% - 78px);
-    transition: all 0.5s ease;
-    /* flex-direction: column; */
-    flex-flow: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 78px;
+  width: calc(100% - 78px);
+  transition: all 0.5s ease;
+  /* flex-direction: column; */
+  flex-flow: column;
 }
 
 .tabs {
-    z-index: 2;
-    width: 90%;
-    height: fit-content;
-    /* padding: 5px; */
-    margin-bottom: 4px;
-    display: flex;
-    flex-direction: row;
-    /* position:absolute; */
-    /* top: 0; */
+  z-index: 2;
+  width: 90%;
+  height: fit-content;
+  /* padding: 5px; */
+  margin-bottom: 4px;
+  display: flex;
+  flex-direction: row;
+  /* position:absolute; */
+  /* top: 0; */
 }
 
 #all_tab {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .close {
-    margin-top: 4px;
-    margin-left: 15px;
-    height: 14px;
-    width: 14px;
-    cursor: pointer;
+  margin-top: 4px;
+  margin-left: 15px;
+  height: 14px;
+  width: 14px;
+  cursor: pointer;
 }
 
 .close_tab {
-    display: flex;
+  display: flex;
 }
 
 .tab {
-    display: flex;
-    flex-wrap: wrap;
-    color: #ffffff;
-    padding: 10px;
-    padding-bottom: 0;
-    background-color: #000000;
-    min-width: fit-content;
-    margin-right: 4px;
-    margin-block-end: 0px;
-    cursor: default;
+  display: flex;
+  flex-wrap: wrap;
+  color: #ffffff;
+  padding: 10px;
+  padding-bottom: 0;
+  background-color: #000000;
+  min-width: fit-content;
+  margin-right: 4px;
+  margin-block-end: 0px;
+  cursor: default;
 }
 
 .tab h4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: larger;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: larger;
 }
 
 .tab.selected {
-    background-color: #11101d;
+  background-color: #11101d;
 }
 
 .click_plus {
-    height: 20px;
-    width: 18px;
+  height: 20px;
+  width: 18px;
 }
 
 .plus_tab {
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45px;
-    background-color: #000000;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45px;
+  background-color: #000000;
 }
 
 .home_content .text {
-    font-size: 25px;
-    font-weight: 500;
-    color: #1d1b31;
-    /* margin: 12px; */
-    z-index: 1;
+  font-size: 25px;
+  font-weight: 500;
+  color: #1d1b31;
+  /* margin: 12px; */
+  z-index: 1;
 }
 
 .home_content #mainI {
-    z-index: 0;
+  z-index: 0;
 }
 
-.sidebar.active~.home_content {
-    width: calc(100% -240px);
-    left: 240px;
+.sidebar.active ~ .home_content {
+  width: calc(100% -240px);
+  left: 240px;
 }
 
 .announcement_section {
-    background-color: white;
-    height: 85%;
-    width: 90%;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
-    /* z-index: 0; */
-    box-shadow: 0px 0px 0px 15px #cfd2d86a;
-    overflow: scroll;
-    /* padding-top: 20px; */
-    /* position: absolute; */
+  background-color: white;
+  height: 85%;
+  width: 90%;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  /* z-index: 0; */
+  box-shadow: 0px 0px 0px 15px #cfd2d86a;
+  overflow: scroll;
+  /* padding-top: 20px; */
+  /* position: absolute; */
 }
 
 #datedisplay {
-    display: block;
+  display: block;
 }
 
 .form {
-    width: 50%;
+  width: 50%;
 }
 
 form.hide {
-    display: none;
+  display: none;
 }
 
 #form_no {
-    position: relative;
-    /* width: 50%; */
-    z-index: 0;
-    top: 0;
+  position: relative;
+  /* width: 50%; */
+  z-index: 0;
+  top: 0;
 }
 
 .fieldspace {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .row {
-    --bs-gutter-x: 0;
+  --bs-gutter-x: 0;
 }
 
 .announcement_section h1 {
-    /* color: rgb(25, 132, 162); */
-    color: #ffffff;
-    font-size: 60px;
+  /* color: rgb(25, 132, 162); */
+  color: #ffffff;
+  font-size: 60px;
 }
 
 .announcement_section p {
-    color: #814b22;
-    font-size: 20px;
-    background: #fff;
-    padding: 7px;
-    border-radius: 5px;
+  color: #814b22;
+  font-size: 20px;
+  background: #fff;
+  padding: 7px;
+  border-radius: 5px;
 }
 
 .announcement_options {
-    padding-top: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  padding-top: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
-
 
 .announcement_section {
-    background-color: white;
-    height: 90%;
-    width: 90%;
-    display: flex;
-    padding-top: 2vh;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
-    z-index: 0;
-    box-shadow: 0px 0px 0px 15px #cfd2d86a;
+  background-color: white;
+  height: 90%;
+  width: 90%;
+  display: flex;
+  padding-top: 2vh;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  z-index: 0;
+  box-shadow: 0px 0px 0px 15px #cfd2d86a;
 }
 
-.heading_announcement{
-    background-color: #11101d;
-    padding: 7px 50px 15px 50px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    box-shadow: 0px 0px 8px 10px #cfd2d86a;
+.heading_announcement {
+  background-color: #11101d;
+  padding: 7px 50px 15px 50px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 0px 0px 8px 10px #cfd2d86a;
 }
 
 .announcement_section h1 {
-    /* color: rgb(25, 132, 162); */
-    color: #ffffff;
-    font-size: 60px;
+  /* color: rgb(25, 132, 162); */
+  color: #ffffff;
+  font-size: 60px;
 }
 
 .announcement_section p {
-    color: #814b22;
-    font-size: 20px;
-    background: #fff;
-    padding: 7px;
-    border-radius: 5px;
+  color: #814b22;
+  font-size: 20px;
+  background: #fff;
+  padding: 7px;
+  border-radius: 5px;
 }
 
 .announcement_options {
-    padding-top: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  padding-top: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
- #a{
-    margin-top: 41px;
+#a {
+  margin-top: 41px;
 }
 /*#be{
     margin-left: 0%;
 } */
-.alert alert-success alert-dismissible{
-    height: 100%;
+.alert alert-success alert-dismissible {
+  height: 100%;
 }
