--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -2,13 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Log in Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   {% load static %}
-  <title> hi </title>
+  <title> Bhargav | Ayush | Krutik | Bhargavi | Aksh</title>
   <style>
     #button{
         background-color: #6F4E37;
