protect route end-points

--- a/App/templates/App/1nomination.html
+++ b/App/templates/App/1nomination.html
@@ -44,14 +44,14 @@
           <h1> Nomination </h1>
         </div>
         <section class="announcement_options">
-         <a href="{% url 'batchwise_nomination' %}" class='text-dark'>
+         <a href="{% url 'batchwise_nomination' %}" class='text-dark' style="text-decoration: none">
             <div class="add_announcement">
                 <img src="{% static 'img/plus.png' %}" alt="" class="plus" />
                 <span></span>
                 <h2 style='color: black'> Create BatchWise Nomination</h2>
               </div>
          </a>
-         <a href="{% url 'download_nomi_admin' %}" class='text-dark'>
+         <a href="{% url 'download_nomi_admin' %}" class='text-dark' style="text-decoration: none">
           <div class="announcement_list">
             <img src="{% static 'img/list.png' %}" alt="" class="list" />
             <span></span>
