--- a/App/templates/App/announcement.html
+++ b/App/templates/App/announcement.html
@@ -44,14 +44,14 @@
           <h1>Announcement</h1>
         </div>
         <section class="announcement_options">
-         <a href="/add_announcement" class='text-dark'>
+         <a href="/add_announcement" class='text-dark' style="text-decoration: none">
             <div class="add_announcement">
                 <img src="{% static 'img/plus.png' %}" alt="" class="plus" />
                 <span></span>
                 <h2 style='color: black'>Add Announcement</h2>
               </div>
          </a>
-         <a href="/list_announcement" class='text-dark'>
+         <a href="/list_announcement" class='text-dark' style="text-decoration: none">
           <div class="announcement_list">
             <img src="{% static 'img/list.png' %}" alt="" class="list" />
             <span></span>
