--- a/App/templates/partials/sidebar.html
+++ b/App/templates/partials/sidebar.html
@@ -17,7 +17,7 @@
             <span class="tooltip"><b>Search...</b></span>
         </li>
         <li>
-            <a href="/">
+            <a href="/home">
                 <i class="bx bx-grid-alt"></i>
                 <span class="links_name">DashBoard</span>
             </a>
